# sensor-network

./: .gitignore  README.md
docs/: ROADMAP.md  human-sense-constraints.md  index.html  main.js  main.min.js  plots.js  privacy.md  smooth-collapse.js  universal-environments.md
js-lib/: README.md  main.js  main.min.js  package-lock.json  package.json  test.html  yamd5.js
js-lib/docs/: README.md
js-lib/src/: TEST.js  handler-random.js  handler-sound.js  pair-internet.js  pair-storage.js  sensor-audio.js  sensor-keyboard.js  sensor-pointer.js  sensor-scroll.js  sensor-text.js  sensor-time.js  sensor-video.js  test.html  transform-limit-fps.js  transform-reward.js  transform-shuffle.js  transform-time.js  ui.js  video.js  webrtc.js
js-lib/test/: README.md  plots.js  smooth-collapse.js  test.html
js-lib/tools/: compile.js  doc.js
py/: LICENSE  README.md  sensornet.py  setup.cfg  test.py  test_board_revisit.py  test_board_wanderings.py  test_continuous_control.py  test_joint_embedding.py  trivial_exploration_test.py
py/env/: copy.py  simple_board.py  simple_copy.py  simple_guidance.py
py/env/graphenv/: README.md  __init__.py
py/minienv/: README.md  __init__.py
py/model/: README.md  TEST.html  attention.py  cmd_line_envs.py  dodge.py  gan.py  log.py  loss.py  momentum_copy.py  recurrency.py  rnn.py  skip_connection.py  vae.py
py/sensornet/: README.md  __init__.py  setup.cfg  test.py
