[metadata]
name = sensornet
version = 0.1.1
author = Antipurity
keywords = ml
description = Gathers numeric data for an ML model to interact with.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Antipurity/sensor-network
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires=
    numpy
package_dir=
    sensornet=..
packages=
    sensornet
python_requires = >=3.4